--- a/develop/index.html
+++ b/develop/index.html
@@ -10,6 +10,6 @@
 <div id="react-view"></div>
 
 <!-- Main bundle -->
-<script type="application/javascript" src="static/build/main.js"></script>
+<script type="application/javascript" src="/static/build/main.js"></script>
 </body>
 </html>
